logs/mobility/build.make.066.log.stderr
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void mobilityStateMachine(const ros::TimerEvent&)’:
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:369:23: error: ‘AutoMode’ was not declared in this scope
  soundClass.playSound(AutoMode);
                       ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
